fx 下载的优化

--- a/swak-sample/src/main/resources/static/index.html
+++ b/swak-sample/src/main/resources/static/index.html
@@ -8,7 +8,7 @@ $(function() {
 	$(document).on('click', '.download', function() {
 		var href = $(this).data('href');
 		if ($App) {
-			$App.download(href)
+			$App.download(href, '张国荣', '', '')
 		}
 	});
 })
